fix work links on small screens

--- a/public/less/sections/work.less
+++ b/public/less/sections/work.less
@@ -121,6 +121,7 @@
 					}
 
 					@media @mobile {
+						min-width: 0;
 						margin-top: 5px;
 					}
 				}
